Removed left-padding from .main-nav in mobile device sizes to get it to align correctly.

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -48,6 +48,7 @@ a {
 .main-nav {
   width: 100%;
   margin: 0 auto;
+  padding-left: 0;
 }
 
 .main-nav a {
